auth getGame add playCard() refactor converter,controller,service,engine
