# src/main/java/nl/appsource/cardserver/service/GameEngine.java
@@ -1,0 +1,8 @@
+package nl.appsource.cardserver.service;
+
+import nl.appsource.cardserver.model.Card;
+import nl.appsource.cardserver.model.Game;
+
+public interface GameEngine {
+    Game playCard(Card card);
+}
